# tree2secondaries

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
include/ALICE/: Constants.hxx  ESD.hxx  Math.hxx  Utilities.hxx  Vertexer.hxx
include/Analysis/: Cuts.hxx  InputFormat.hxx  Manager.hxx  OutputFormat.hxx  Settings.hxx  TruthHandler.hxx
include/App/: Logger.hxx  Parser.hxx  Settings.hxx  Utilities.hxx
include/DataFormats/: ChannelA.hxx  ChannelD.hxx  DataFormats.hxx  Events.hxx  Flat.hxx  Found.hxx  Injected.hxx  PackedEvents.hxx  Sexaquark.hxx  StructsOfVectors.hxx
include/Finder/: Cuts.hxx  Finder.hxx
include/Fit/: ChannelA.hxx  ChannelD.hxx  Sexaquark.hxx  Track.hxx  Utilities.hxx  V0.hxx
include/KF/: Extensions.hxx  Utilities.hxx
include/MC/: Particles.hxx
include/Math/: Common.hxx  Constants.hxx  KFWrapper.hxx  Math.hxx  Propagator.hxx  Vertexer.hxx  VtxrResults.hxx
include/Packager/: Cuts.hxx  Packager.hxx  TruthHandler.hxx
include/References/: References.hxx  References2.hxx
include/Secondary/: Charged.hxx  Event.hxx  Neutral.hxx  Particle.hxx  Reconstructed.hxx  Sexaquark.hxx  True.hxx  TypeA.hxx  TypeD.hxx  TypeE.hxx  TypeH.hxx
include/Structures/: ChannelA.hxx  ChannelD.hxx  ChannelE.hxx  ChannelH.hxx  Events.hxx  Found.hxx  PackedEvents.hxx
include/Utilities/: Logger.hxx  Parser.hxx
scripts/farm-gsi/: pack_rd_exec.sh  pack_rd_wrapper.sh
scripts/farm-pi/: analysis_single_run.sh  analysis_wrapper.sh  pack_mc_exec.sh  pack_mc_wrapper.sh  search_mc_exec.sh  search_mc_wrapper.sh
src/: App.cxx  CMakeLists.txt  Finder.cxx  Manager.cxx  Packager.cxx
src/Analysis/: CMakeLists.txt  Manager.cxx
src/App/: App.cxx  CMakeLists.txt  Parser.cxx
src/Math/: CMakeLists.txt  Common.cxx  Vertexer.cxx
